# service-it

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  codemeta.json  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check.yml  publish.yml  pull-test.yml  pull.yml  push-main.yml
docs/: conf.py  index.rst
serviceit/: __init__.py  daemon.py  server.py
tests/: test_cli.py  test_init.py  test_server.py
