[metadata]
description-file = "README.md"

[build-system]
requires = ["poetry>=1,<2", "coverage[toml]>=5,<6"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "serviceit"
version = "0.1.1"
description = "Turn any Python function into a service that receives JSON payloads on some port."
keywords = ["socket", "json", "service", "server"]
authors = ["Douglas Myers-Turnbull"]
maintainers = ["Douglas Myers-Turnbull"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/dmyersturnbull/service-it"
repository = "https://github.com/dmyersturnbull/service-it"
documentation = "https://service-it.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
	"Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "README.md",
    "LICENSE.txt",
    "CHANGELOG.md"
]

[tool.poetry.urls]
CI = "https://github.com/dmyersturnbull/service-it/actions"
Issues = "https://github.com/dmyersturnbull/service-it/issues"
Download = "https://pypi.org/project/serviceit/"


#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.dependencies]
python                   = ">=3.7, <4"
tomlkit                  = ">=0.5, <1.0"
importlib-metadata       = "^1"
typer                    = ">=0.3, <1.0"

[tool.poetry.dev-dependencies]
pre-commit               = "^2"
pytest                   = "^6"
coverage                 = {extras = ["toml"], version = "^5"}
pytest-cov               = "^2"
sphinx                   = "^3"
sphinx-autoapi           = "^1"
sphinx-rtd-theme         = ">=0.5, <1.0"
flake8                   = "^3"
flake8-docstrings        = "^1"
black                    = "=19.10b0"
isort                    = "^5"
sphinx-autodoc-typehints = "^1"
flake8-bugbear           = "^20"
coveralls                = "^2"
tomlkit                  = ">=0.5, <1.0"

[tool.poetry.extras]
dev       = [
            "pre-commit", "pytest", "coverage", "pytest-cov",
            "sphinx", "sphinx-autodoc-typehints", "sphinx-autoapi",
            "flake8", "flake8-docstrings",
            "black", "isort",
            "flake8-bugbear"
]


#########################################################################################
# Tyrannosaurus
#########################################################################################

[tool.tyrannosaurus.options]
align    = true

[tool.tyrannosaurus.sources]
status             = "'Development'"
date               = "${today}"
copyright          = "'Copyright 2020'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
pyversions         = "tool.poetry.dependencies"
devdeps            = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
authors = [
    "Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>"
]
maintainers = "tool.tyrannosaurus.sources.authors"

[tool.tyrannosuarus.paths]
recipe             = "'recipes/service-it/meta.yml'"
environment        = "'environment.yml'"

[tool.tyrannosaurus.targets]
pyproject    = true
init         = true
tox          = true
docs         = true
recipes      = true
license      = true
authors      = true
github       = true
travis       = true
dockerfile   = true
readme       = true
changelog    = true
citation     = true
codemeta     = true
environment  = false


#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["serviceit"]

[tool.coverage.run]
source = ["serviceit"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py37", "py38"]

[tool.isort]
line_length = 100

[mypy]
check_untyped_defs = true
strict_optional = true

[pycodestyle]
max-line-length = 100
statistics = true

[pydocstyle]
# 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
ignore = ["D203", "D212", "D302"]
