[metadata]
description-file = "README.md"

[build-system]
requires = ["poetry>=1,<2", "coverage[toml]>=5,<6", "virtualenv>=20.2"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "serviceit"
version = "0.2.1"
description = "Turn any Python function into a service that receives JSON payloads on some port."
keywords = ["socket", "json", "service", "server"]
authors = ["Douglas Myers-Turnbull"]
maintainers = ["Douglas Myers-Turnbull"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/dmyersturnbull/service-it"
repository = "https://github.com/dmyersturnbull/service-it"
documentation = "https://service-it.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
	"Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
CI = "https://github.com/dmyersturnbull/service-it/actions"
Issues = "https://github.com/dmyersturnbull/service-it/issues"
Download = "https://pypi.org/project/serviceit/"


#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.dependencies]
python                   = "^3.8"
tomlkit                  = ">=0.7, <1.0"
typer                    = ">=0.3, <1.0"

[tool.poetry.dev-dependencies]
black                    = "==21.11b1"
pre-commit               = "^2.13"
pre-commit-hooks         = "^4.0"
bandit                   = "^1.7"
pytest                   = "^6.2"
coverage                 = {extras = ["toml"], version = "^5.5"}
pytest-cov               = "^2.11"
flake8                   = "^3.9"
flake8-docstrings        = "^1.5"
flake8-bugbear           = ">=21"
sphinx                   = "^4.0"
sphinx-copybutton        = ">=0.3, <1.0"
sphinx-autoapi           = "^1.5"
sphinx-rtd-theme         = ">=0.5, <1.0"


#########################################################################################
# Tyrannosaurus
#########################################################################################

[tool.tyrannosaurus.options]
align    = true

[tool.tyrannosaurus.sources]
status             = "'Development'"
date               = "${today}"
copyright          = "'Copyright 2020–2021'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
pyversions         = "tool.poetry.dependencies"
devdeps            = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
authors = [
    "Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>"
]
maintainers = "tool.tyrannosaurus.sources.authors"

[tool.tyrannosuarus.paths]
recipe             = "'recipes/service-it/meta.yml'"
environment        = "'environment.yml'"

[tool.tyrannosaurus.targets]
pyproject    = true
init         = true
tox          = true
docs         = true
recipes      = true
license      = true
authors      = true
github       = true
travis       = true
readme       = true
changelog    = true
environment  = false


#########################################################################################
# Testing
#########################################################################################

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["serviceit"]

[tool.coverage.run]
source = ["serviceit"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py38"]
